# corbenik

./: .clang-format  .gitignore  .gitmodules  Makefile  Makefile.am  README.dev.md  README.md  README.txt  TODO.txt  autogen.sh  common.mk  configure.ac  copy.sh  linker.ld
asm/: backdoor.s  sigpatches.s
bits/: Makefile  backdoor.s  chain.s  reboot_hook.s
boot/: Makefile.am  arm11.c  chainloader.c  corbenik.c  input.c  interpreter.c  interrupt.c  linker.ld  menu-backend.c  menu.c  patcher.c  start.s
boot/configback/: dummy.c  file-dat.c
boot/firm/: decryptor.c  firm.c  firmlaunch.c  keys.c  util.c  version.c
boot/patch/: emunand.c  module.c  reboot.c  svc.c
boot/std/: abort.c  draw.c  fs.c  memory.c
bootstub/: Makefile.am  chainloader.c  fs.c  linker.ld  memory.c  start.s
common/: lzss.c
contrib/: 1.x-2.x-factory-sigpatch.pco  2x-firmprot.pco  Makefile  README.md  mysterymachine-6gen.pco  mysterymachine-sm.pco  mysterymachine.pco  remove_outlines-sm.pco  svc_permission_chk_dis.pco
doc/: CODE_ORIGIN.md  STDLIB.md  attribution.md  attribution.txt  bytecode.md  coding-standard.md  compiling.md  compiling.txt  features.md  firmware.md  firmware.txt  intended-features.txt  nonos.md  std.md  todo.md  todo.txt
host/: Makefile  bytecode_asm.py  compile_ctr9_io.sh  compile_header.c  conv-font-bin.sh  copy-min.sh  copy.sh  error-decoder.c  font-emit.c  generate_keys.sh  generate_langemu_conf.sh  generate_localeemu.sh  key_char.c  n3ds_firm.sh.in  o3ds_firm.sh.in  release.sh  stub-i2c-bdfe.patch  symtab.sh
host/bytecode_asm/: Makefile.in  WARNING.txt  aclocal.m4  autogen.sh  config.h.in  configure.ac
host/bytecode_asm/src/: main.c  tokenize.c
host/ips2pco/: Makefile  bips.c  blib.c  blib.h  ips_fmt.h  util.c  util.h
include/: Makefile.am  arm11.h  common.h  config.h.in  corbconf.h  input.h  interp.h  interrupt.h  lzss.c  lzss.h  menu-backend.h  menu.h  option.h  patch_format.h  patcher.h  screeninit.h  util.h
include/firm/: decryptor.h  fcram.h  firm.h  headers.h  internal.h  keys.h
include/patch/: emunand.h  patch_file.h
include/std/: abort.h  allocator.h  draw.h  fs.h  memory.h  types.h  unused.h
loader/: Makefile
loader/source/: interp.c  interp.h  interpreter.c  loader.c  patcher.c  patcher.h  statics.c
modules/: Makefile  README.txt
modules/template/: Makefile  linker.ld
modules/template/meta/: name
modules/template/src/: exported.h  main.c  symtab.h
patch/: 00_sig.pco  01_firmprot.pco  02_antiantidg.pco  03_unitinfo.pco  04_memexec.pco  20_regionfree_installed.pco  21_block_cart_update.pco  22_block_eshop_update.pco  23_block_nim_update.pco  24_ro_sigs.pco  25_friends_ver.pco  26_dlp_region.pco  27_errdisp.pco  28_mset_str.pco  29_ns_force_testmenu.pco  2A_secinfo_sigs.pco  60_twl_fix.pco  60_twl_fix_o3ds.pco  70_agb_sig.pco  71_agb_bios.pco  Makefile  aadowngrade.pco  agb_biosscreen.pco  agb_sig.pco  block_cart_update.pco  block_eshop_update.pco  block_nim_update.pco  dlp_region.pco  errdisp.pco  friends_ver.pco  memexec.pco  mset_str.pco  ns_force_menu.pco  prot.pco  regionfree.pco  ro_sigs.pco  secinfo_sigs.pco  sig.pco  twl_fix.pco  twl_fix_new.pco  (+3 more)
patchbins/: README.txt
patchbins/firmprot/: Makefile
patchbins/firmprot/src/: patcher.c  start.s
patchbins/signatures/: Makefile
patchbins/signatures/meta/: desc  name
patchbins/signatures/src/: exported.h  link_table.s  main.c
patchbins/signatures/tool/: compile_header.c
patchbins/template/: Makefile  linker.ld
patchbins/template/src/: link_table.s  start.s
source/: Makefile.am  arm11.c  chain.c  chainloader.c  common.h  config-backend-file.c  config-file.c  config.c  config.h  corbenik.c  crypto.c  display.c  headers.h  i2c.c  i2c.h  input.c  input.h  interp.c  interp.h  interpreter.c  interrupt.c  interrupt.h  linker.c  linker.ld  main.c  menu-backend.c  menu.c  option.c  patch_format.h  patcher.c  patcher.h  screeninit.c  screeninit.h  start.s  test-framework.c
source/fatfs/: delay.s  diskio.c  diskio.h  ff.c  ff.h  ffconf.h  integer.h  sdmmc.c  sdmmc.h
source/firm/: crypto.c  crypto.h  decryptor.c  decryptor.h  fcram.c  fcram.h  firm.c  firm.h  firmlaunch.c  headers.h  keys.c  util.c  version.c
source/firm/keys/: Y11_96.gen  Y3D_0.gen  Y3D_1.gen  Y3D_2.gen  Y3D_3.gen  Y3D_4.gen  Y3D_5.gen
source/misc/: sha256.c  sha256.h
source/patch/: aadowngrade.c  base.c  emunand.c  emunand.h  memexec.c  module.c  patch_file.h  prot.c  reboot.c  sig.c  svc.c  unitinfo.c
source/std/: README.txt  abort.c  abort.h  allocator.c  draw.c  draw.h  font.h  fs.c  fs.h  memory.c  memory.h  types.h
source/test/: basic-sanity.test  file.test
test/: Makefile  vm-test1.pco
vco/signatures/: linker.ld  tool
vco/signatures/src/: exported.h  headers.h  link_table.s  main.c  start.s
vco/template/: Makefile  linker.ld
vco/template/meta/: desc
vco/template/src/: headers.h  link_table.s  main.c  start.s
