#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([datadrain], [0.3], [chaos.kagami@gmail.com], [datadrain], [http://github.com/chaoskagami/corbenik])
AC_CONFIG_SRCDIR([LICENSE])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UINT64_T

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

